# trantor

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  conf.py  main.cpp
.github/workflows/: pages.yml
docs/: index.html  index.md
docs/html/: annotated.html  annotated_dup.js  class_statement.html  classes.html  classtrantor_1_1_column-members.html  classtrantor_1_1_column.html  classtrantor_1_1_column_p-members.html  classtrantor_1_1_column_p.html  classtrantor_1_1_connection-members.html  classtrantor_1_1_connection.html  classtrantor_1_1_statement-members.html  classtrantor_1_1_statement.html  classtrantor_1_1_table-members.html  classtrantor_1_1_table.html  column_8hpp.html  column_8hpp_source.html  common_8hpp.html  common_8hpp.js  common_8hpp_source.html  concepts.html  concepts.js  concepttrantor_1_1.html  concepttrantor_1_1_arithmetic_t.html  concepttrantor_1_1_column_belonging_to_class.html  concepttrantor_1_1_continuous_container.html  concepttrantor_1_1_optional_t.html  connection_8hpp.html  connection_8hpp_source.html  constraint_8hpp.html  constraint_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d77929a72cf5b0840d923b108a96d282.html  dir_d77929a72cf5b0840d923b108a96d282.js  features.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  (+75 more)
docs/html/search/: all_0.js  all_1.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+26 more)
include/: common.hpp  connection.hpp  result.hpp  table.hpp  trantor.hpp
include/orm/: column.hpp  connection.hpp  constraint.hpp  statement.hpp  table.hpp  types.hpp
src/: common.hpp  connection.hpp  table.hpp
tests/: CMakeLists.txt
tests/src/: query_test.cpp  table_test.cpp
